@@ -1527,6 +1527,10 @@ cl_symbols[] = {
 {EXT_ "CL-FIXNUM", SI_ORDINARY, NULL, -1, NULL},
 {EXT_ "CL-INDEX", SI_ORDINARY, NULL, -1, NULL},
 
+{SYS_ "DO-DEFTYPE", SI_ORDINARY, ECL_NAME(si_do_deftype), -1, OBJNULL},
+{SYS_ "CREATE-TYPE-NAME", SI_ORDINARY, NULL, -1, OBJNULL},
+{SYS_ "*ALIEN-DECLARATIONS*", SI_SPECIAL, NULL, -1, Cnil},
+
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
 
